--- a/test.html
+++ b/test.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test document</title>
+
+  <!-- добавим стили mocha для отображения результатов -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
+
+ <!-- добавляем сам фреймворк mocha -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js"></script>
+
+  <script>
+    // включаем режим тестирования в стиле BDD
+    mocha.setup('bdd');
+  </script>
+
+  <!-- добавим chai -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
+
+  <script>
+    //  Объявим assert глобально
+    let assert = chai.assert;
+  </script>
+
+  <!-- <meta charset="UTF-8"> -->
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <!---->
+  <!-- <title>Test document</title> -->
+
 </head>
+
 <body>
-  <p>Before script...</p>
-  <script src="test.js"> </script>
-  <p>...After script</p>
+  <script>
+    function pow(x, n) {
+      /* Здесь будет реализация функции, пока пусто */
+    }
+  </script>
+
+  <!-- скрипт со спецификацией (describe, it...) -->
+  <script src="test.js"></script>
+
+  <!-- элемент с id="mocha" будет содержать результаты тестов -->
+  <div id="mocha"></div>
+
+  <!-- запускаем тесты! -->
+  <script>
+    mocha.run();
+  </script>
 
 </body>
 </html>
