--- a/test.html
+++ b/test.html
@@ -31,8 +31,8 @@
 <body>
   <script>
     function pow(x, n) {
-      /* Здесь будет реализация функции, пока пусто */
-    }
+      return 8; //
+    };
   </script>
 
   <!-- скрипт со спецификацией (describe, it...) -->
